Fix all SonarQube issues: replace collect, add logger, remove coverage condition